// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props Beats badge should not show 1`] = `
<Fragment>
  <div>
    <EuiButtonEmpty
      flush="left"
      iconType="arrowLeft"
      size="xs"
    >
      <FormattedMessage
        defaultMessage="Browse all integrations"
        id="home.tutorial.introduction.browseAllIntegrationsButton"
        values={Object {}}
      />
    </EuiButtonEmpty>
  </div>
  <EuiSpacer />
  <EuiPageHeader
    description={
      <React.Fragment>
        <Content
          text="this is a great tutorial about..."
        />
      </React.Fragment>
    }
    pageTitle={
      <React.Fragment>
        Great tutorial
        <React.Fragment>
           
          <EuiBetaBadge
            label="Beta"
          />
        </React.Fragment>
      </React.Fragment>
    }
  />
</Fragment>
`;

exports[`props Beats badge should show 1`] = `
<Fragment>
  <div>
    <EuiButtonEmpty
      flush="left"
      iconType="arrowLeft"
      size="xs"
    >
      <FormattedMessage
        defaultMessage="Browse all integrations"
        id="home.tutorial.introduction.browseAllIntegrationsButton"
        values={Object {}}
      />
    </EuiButtonEmpty>
  </div>
  <EuiSpacer />
  <EuiPageHeader
    description={
      <React.Fragment>
        <Content
          text="this is a great tutorial about..."
        />
      </React.Fragment>
    }
    pageTitle={
      <React.Fragment>
        Great tutorial
        <React.Fragment>
           
          <EuiBetaBadge
            label="Beta"
          />
        </React.Fragment>
        <React.Fragment>
           
          <EuiBadge>
            <FormattedMessage
              defaultMessage="Beats"
              id="home.tutorial.introduction.beatsBadgeLabel"
              values={Object {}}
            />
          </EuiBadge>
        </React.Fragment>
      </React.Fragment>
    }
  />
</Fragment>
`;

exports[`props exportedFieldsUrl 1`] = `
<Fragment>
  <div>
    <EuiButtonEmpty
      flush="left"
      iconType="arrowLeft"
      size="xs"
    >
      <FormattedMessage
        defaultMessage="Browse all integrations"
        id="home.tutorial.introduction.browseAllIntegrationsButton"
        values={Object {}}
      />
    </EuiButtonEmpty>
  </div>
  <EuiSpacer />
  <EuiPageHeader
    description={
      <React.Fragment>
        <Content
          text="this is a great tutorial about..."
        />
        <React.Fragment>
          <br />
          <EuiLink
            href="exported_fields_url"
            rel="noopener"
            target="_blank"
          >
            <FormattedMessage
              defaultMessage="View exported fields"
              id="home.tutorial.introduction.viewButtonLabel"
              values={Object {}}
            />
          </EuiLink>
        </React.Fragment>
      </React.Fragment>
    }
    pageTitle={
      <React.Fragment>
        Great tutorial
      </React.Fragment>
    }
  />
</Fragment>
`;

exports[`props iconType 1`] = `
<Fragment>
  <div>
    <EuiButtonEmpty
      flush="left"
      iconType="arrowLeft"
      size="xs"
    >
      <FormattedMessage
        defaultMessage="Browse all integrations"
        id="home.tutorial.introduction.browseAllIntegrationsButton"
        values={Object {}}
      />
    </EuiButtonEmpty>
  </div>
  <EuiSpacer />
  <EuiPageHeader
    description={
      <React.Fragment>
        <Content
          text="this is a great tutorial about..."
        />
      </React.Fragment>
    }
    iconType="logoElastic"
    pageTitle={
      <React.Fragment>
        Great tutorial
      </React.Fragment>
    }
  />
</Fragment>
`;

exports[`props isBeta 1`] = `
<Fragment>
  <div>
    <EuiButtonEmpty
      flush="left"
      iconType="arrowLeft"
      size="xs"
    >
      <FormattedMessage
        defaultMessage="Browse all integrations"
        id="home.tutorial.introduction.browseAllIntegrationsButton"
        values={Object {}}
      />
    </EuiButtonEmpty>
  </div>
  <EuiSpacer />
  <EuiPageHeader
    description={
      <React.Fragment>
        <Content
          text="this is a great tutorial about..."
        />
      </React.Fragment>
    }
    pageTitle={
      <React.Fragment>
        Great tutorial
        <React.Fragment>
           
          <EuiBetaBadge
            label="Beta"
          />
        </React.Fragment>
      </React.Fragment>
    }
  />
</Fragment>
`;

exports[`props previewUrl 1`] = `
<Fragment>
  <div>
    <EuiButtonEmpty
      flush="left"
      iconType="arrowLeft"
      size="xs"
    >
      <FormattedMessage
        defaultMessage="Browse all integrations"
        id="home.tutorial.introduction.browseAllIntegrationsButton"
        values={Object {}}
      />
    </EuiButtonEmpty>
  </div>
  <EuiSpacer />
  <EuiPageHeader
    description={
      <React.Fragment>
        <Content
          text="this is a great tutorial about..."
        />
      </React.Fragment>
    }
    pageTitle={
      <React.Fragment>
        Great tutorial
      </React.Fragment>
    }
    rightSideItems={
      Array [
        <EuiImage
          allowFullScreen={true}
          alt="screenshot of primary dashboard."
          fullScreenIconColor="dark"
          size="l"
          url="preview_image_url"
        />,
      ]
    }
  />
</Fragment>
`;

exports[`render 1`] = `
<Fragment>
  <div>
    <EuiButtonEmpty
      flush="left"
      iconType="arrowLeft"
      size="xs"
    >
      <FormattedMessage
        defaultMessage="Browse all integrations"
        id="home.tutorial.introduction.browseAllIntegrationsButton"
        values={Object {}}
      />
    </EuiButtonEmpty>
  </div>
  <EuiSpacer />
  <EuiPageHeader
    description={
      <React.Fragment>
        <Content
          text="this is a great tutorial about..."
        />
      </React.Fragment>
    }
    pageTitle={
      <React.Fragment>
        Great tutorial
      </React.Fragment>
    }
  />
</Fragment>
`;
